springboot-gradle/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-gradle
  labels:
    app: springboot-gradle
spec:
  selector:
    matchLabels:
      app: springboot-gradle
  replicas: 1
  template:
    metadata:
      name: springboot-gradle
      labels:
        app: springboot-gradle
    spec:
      imagePullSecrets:
      - name: dockerhub      
      containers:
        - name: springboot-gradle
          image: docker.io/hiondal/springboot-gradle:latest
          imagePullPolicy: Always
          ports:
            - name: port1
              containerPort: 8081
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 300m
              memory: 300Mi
