springboot-gradle/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-gradle
spec:
  type: ClusterIP
  selector:
    app: springboot-gradle
  ports:
    - name: springboot-gradle
      port: 8080
      targetPort: 8080
