springboot-gradle/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-gradle
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: gappa.springboot-gradle.43.200.12.214.nip.io
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: springboot-gradle
                port: 
                  number: 8080
